「何人掛けのテーブルが何個」という表記に変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <div id="conditions">
         <div>
           <label for="numTables">テーブル数：</label>
-          <input type="number" id="numTables" min="1">
+          <input type="number" id="seatsPerTable" min="1">人掛けのテーブルが
+          <input type="number" id="numTables" min="1">個
         </div>
         <div>
           <label for="tableShape">テーブルの形：</label>
