--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
           </select>
         </div>
         <div>
-          <label for="numParticipants">参加人数：</label>
-          <input type="number" id="numParticipants" min="1">
+          <label for="participants">参加者：</label>
+          <div>
+            <input type="checkbox" name="participants" value="all">全員参加
+            <div id="member"></div>
+
+          </div>
+
         </div>
         <div>
           <label for="distance">特定の人同士を近づける：</label>
