テーブルのlabelの修正

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       <h1>席決めアプリ</h1>
       <div id="conditions">
         <div>
-          <label for="numTables">テーブル：</label>
-          <input type="number" id="seatsPerTable" min="1">人掛けのテーブルが
+          <label for="seatsPerTable">テーブル：</label>
+          <input type="number" id="seatsPerTable" min="1">人掛けの
+          <label for="numTables">テーブルが</label>
           <input type="number" id="numTables" min="1">個
           <button id="addTableButton">＋</button>
         </div>
