入力フォームのデータを保管する

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             を
             <select id="arrangement">
               <option value="null"></option>
-              <option value="">隣同士にする</option>
-              <option value="">同じテーブルにする</option>
+              <option value="nextto">隣同士にする</option>
+              <option value="sametable">同じテーブルにする</option>
             </select>
             <button id="addDistanceBtn">＋</button>
           </div>
         </div>
         <div>
-          <button>席を決める</button>
+          <button type="button" id="FormDataBtn">席を決める</button>
         </div>
 
       </div>
