arrayをobject型への変更とそのほか微調整

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div id="distance">
           <label for="distance">特定の人同士を近づける：</label>
           <div>
-            <select class="memberList person1"></select>
+            <select class="memberList distancePerson1"></select>
             と
-            <select class="memberList person2"></select>
+            <select class="memberList distancePerson2"></select>
             を
             <select id="arrangement">
               <option value="null"></option>
