--- a/index.html
+++ b/index.html
@@ -4,59 +4,68 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Seat Selector</title>
   </head>
   <body>
     <div id="app">
-      <h1>席決めアプリ</h1>
-      <div id="conditions">
-        <div>
-          <label>参加者：</label>
-          <div>
-            <label for="checkAll">
-              <input id="checkAll" type="checkbox" name="participants" value="all">全員参加
-            </label>
-            <div id="member"></div>
+      <header>
+        <h1>Seat Selector</h1>
+      </header>
+      <div id="contents">
+        <div id="conditions">
+          <div class="condition">
+            <label>参加者：</label>
+            <div>
+              <label for="checkAll">
+                <input id="checkAll" type="checkbox" name="participants" value="all">全員参加
+              </label>
+              <div id="member"></div>
+            </div>
+            <div class="btnContainer">
+              <button id="setParticipantsBtn" class="middleBtn">参加者を確定する</button>
+            </div>
           </div>
-          <button id="setParticipantsBtn">参加者を確定する</button>
-        </div>
-        <br>
-        <div>
-          <label for="seatsPerTable">テーブル：</label>
-          <input type="number" id="seatsPerTable" min="1">人掛けの
-          <label for="numTables">テーブルが</label>
-          <input type="number" id="numTables" min="1">個
-          <button id="addTableButton">＋</button>
-        </div>
-        <div id="tableForms"></div>
-        <div>
-          <label for="tableShape">テーブルの形：</label>
-          <select id="tableShape">
-            <option value="rectangle">長方形</option>
-            <option value="square">正方形</option>
-          </select>
-        </div>
-        <div id="distance">
-          <label for="distance">特定の人同士を近づける：</label>
-          <div>
-            <select class="memberList person1"></select>
-            と
-            <select class="memberList person2"></select>
-            を
-            <select id="arrangement">
-              <option value="null"></option>
-              <option value="">隣同士にする</option>
-              <option value="">同じテーブルにする</option>
-            </select>
-            <button id="addDistanceBtn">＋</button>
+          <div class="condition">
+            <div>
+              <label for="seatsPerTable">テーブル：</label>
+              <input type="number" id="seatsPerTable" min="1">人掛けの
+              <label for="numTables">テーブルが</label>
+              <input type="number" id="numTables" min="1">個
+              <button id="addTableButton" class="smallBtn">＋</button>
+            </div>
+            <div id="tableForms"></div>
+            <hr>
+            <div>
+              <label for="tableShape">テーブルの形：</label>
+              <select id="tableShape">
+                <option value="rectangle">長方形</option>
+                <option value="square">正方形</option>
+              </select>
+            </div>
+            <hr>
+            <div id="distance">
+              <label for="distance">特定の人同士を近づける：</label>
+              <div>
+                <select class="memberList person1"></select>
+                と
+                <select class="memberList person2"></select>
+                を
+                <select id="arrangement">
+                  <option value="null"></option>
+                  <option value="">隣同士にする</option>
+                  <option value="">同じテーブルにする</option>
+                </select>
+                <button id="addDistanceBtn" class="smallBtn">＋</button>
+              </div>
+            </div>
           </div>
+          <div class="btnContainer">
+            <button id="decideSeatsBtn" class="bigBtn">席を決める</button>
+          </div>
+          <br>
         </div>
-        <div>
-          <button>席を決める</button>
-        </div>
-
+        <div id="result"></div>
       </div>
-    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
