--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seat Selector</title>
   </head>
   <body>
     <div id="app">
       <header>
+        <img id="headerIcon" src="/favicon.png">
         <h1>Seat Selector</h1>
       </header>
       <div id="contents">
