--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
           <div class="condition">
             <div>
               <label for="seatsPerTable">テーブル：</label>
-              <input type="number" id="seatsPerTable" min="1">人掛けの
+              <input type="number" class="numberSpace" id="seatsPerTable" min="1">人掛けの
               <label for="numTables">テーブルが</label>
-              <input type="number" id="numTables" min="1">個
+              <input type="number" class="numberSpace" id="numTables" min="1">個
               <button id="addTableButton" class="smallBtn">＋</button>
             </div>
             <div id="tableForms"></div>
             <hr>
-            <div>
+            <!-- <div id="shape">
               <label for="tableShape">テーブルの形：</label>
               <select id="tableShape">
                 <option value="rectangle">長方形</option>
                 <option value="square">円形</option>
               </select>
             </div>
-            <hr>
-            <div id="distance">
+            <hr> -->
+            <!-- <div id="distance">
               <label for="distance">特定の人同士を近づける：</label>
               <div>
                 <select class="memberList person1"></select>
@@ -59,15 +59,15 @@
                 <button id="addDistanceBtn" class="smallBtn">＋</button>
               </div>
             </div>
-            <hr>
+            <hr> -->
             <div id="fixed">
               <label for="fixed">特定の人の席を固定する：</label>
               <div>
                 <select class="memberList fixedParticipant"></select>
                 を
-                <input type="number" class="fixedTable" min="1">
+                <input type="number" class="fixedTable numberSpace" min="1">
                 番目のテーブルの
-                <input type="number" class="fixedSeat" min="1">
+                <input type="number" class="fixedSeat numberSpace" min="1">
                 番の席に固定する
                 <button id="addFixedBtn" class="smallBtn">＋</button>
               </div>
@@ -76,7 +76,6 @@
           <div class="btnContainer">
             <button id="decideSeatsBtn" class="bigBtn">席を決める</button>
           </div>
-          <br>
         </div>
         <div id="result"></div>
       </div>
