「全員にチェックを入れる」機能のバグ修正

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <label>参加者：</label>
             <div>
               <label for="checkAll">
-                <input id="checkAll" type="checkbox" name="participants" value="all">全員参加
+                <input id="checkAll" type="checkbox" name="participants" value="all">全員にチェックを入れる
               </label>
               <div id="member"></div>
             </div>
