--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </div>
         <div id="result"></div>
       </div>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
