--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
               <label for="checkAll">
                 <input id="checkAll" type="checkbox" name="participants" value="all">全員参加
               </label>
+
+              <!-- 入力フォームテスト -->
+              <div id="inputForms">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" class="employeeName" placeholder="名前">
+              </div>
+              <button id="addEmployeesBtn">追加</button>
+
               <div id="member"></div>
             </div>
             <div class="btnContainer">
