--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             <label>参加者：</label>
             <div>
               <div id="inputForms">
-                <input type="text" class="employeeName" placeholder="名前">
+                <input type="text" id="employeeName" placeholder="名前">
                 <button id="addEmployeesBtn">追加</button>
               </div>
-
               <label for="checkAll">
                 <input id="checkAll" type="checkbox" name="participants" value="all">全員参加
               </label>
