--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <div id="inputForms">
                 <input type="text" id="employeeName" placeholder="名前">
                 <button id="addEmployeesBtn">追加</button>
+                <button id="clearDataBtn">リセット</button>
               </div>
               <label for="checkAll">
                 <input id="checkAll" type="checkbox" name="participants" value="all">全員参加
