--- a/index.html
+++ b/index.html
@@ -68,12 +68,9 @@
             <div id="fixed">
               <label for="fixed">特定の人の席を固定する：</label>
               <div>
-                <select class="memberList fixedParticipant"></select>
-                を
-                <input type="number" class="fixedTable numberSpace" min="1">
-                番目のテーブルの
-                <input type="number" class="fixedSeat numberSpace" min="1">
-                番の席に固定する
+                <select class="memberList fixedParticipant"></select>を
+                <input type="number" class="fixedTable numberSpace" min="1">番目のテーブルの
+                <input type="number" class="fixedSeat numberSpace" min="1">番の席に固定する
                 <button id="addFixedBtn" class="smallBtn">＋</button>
               </div>
             </div>
