addTableForm()のidの重複を修正

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <div class="condition">
             <div>
               <label for="seatsPerTable">テーブル：</label>
-              <input type="number" class="numberSpace" id="seatsPerTable" min="1">人掛けの
+              <input type="number" class="numberSpace seatsPerTable" min="1">人掛けの
               <label for="numTables">テーブルが</label>
-              <input type="number" class="numberSpace" id="numTables" min="1">個
+              <input type="number" class="numberSpace numTables" min="1">個
               <button id="addTableButton" class="smallBtn">＋</button>
             </div>
             <div id="tableForms"></div>
