出力結果を画像としてダウンロードする

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <div class="btnContainer">
             <button id="decideSeatsBtn" class="bigBtn">席を決める</button>
           </div>
+          <div class="btnContainer">
+            <button id="downloadResultBtn">結果を画像でダウンロード</button>
+          </div>
         </div>
         <div id="result"></div>
       </div>
